--- a/src/janelas/Principal.form
+++ b/src/janelas/Principal.form
@@ -529,7 +529,7 @@
                   <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="9">
+                  <StringArray count="10">
                     <StringItem index="0" value="COM1"/>
                     <StringItem index="1" value="COM2"/>
                     <StringItem index="2" value="COM3"/>
@@ -539,6 +539,7 @@
                     <StringItem index="6" value="COM7"/>
                     <StringItem index="7" value="COM8"/>
                     <StringItem index="8" value="COM9"/>
+                    <StringItem index="9" value="COM10"/>
                   </StringArray>
                 </Property>
               </Properties>
